Crud completo, falta que las pestanhas funcionen

--- a/Frontend/maxnumber/src/app/app.component.html
+++ b/Frontend/maxnumber/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-polynomial-calculator></app-polynomial-calculator>
+<div class="tabs">
+  <a routerLink="/polynomial-calculator" routerLinkActive="tab-active" class="tab tab-bordered" (click)="log('Polynomial Calculator')">Polynomial Calculator</a>
+  <a routerLink="/alumnos" routerLinkActive="tab-active" class="tab tab-bordered" (click)="log('Alumnos')">Alumnos</a>
+</div>
+
+<router-outlet></router-outlet>
