--- a/Frontend/maxnumber/src/app/polynomial-calculator/polynomial-calculator.component.html
+++ b/Frontend/maxnumber/src/app/polynomial-calculator/polynomial-calculator.component.html
@@ -47,7 +47,7 @@
           <button (click)="calculateDerivative()" class="btn btn-primary w-full">Calcular Derivada</button>
           <label class="block text-sm font-medium text-gray-700 mb-2">Valor de X (para Evaluar Derivada)</label>
           <input type="number" [(ngModel)]="xValue" placeholder="Valor de x" class="input input-bordered w-full mb-4">
-          <button (click)="evaluateDerivative()" class="btn btn-secondary w-full">Evaluar Derivada</button>
+          <button (click)="evaluateDerivative()" class="btn btn-accent w-full">Evaluar Derivada</button>
         </div>
       </div>
     </div>
